[tool.poetry]
name = "poirot"
version = "1.0.1"
description = "web spider tools"
authors = ["harumonia <zxjlm233@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
numpy = "1.18.0"
flask-socketio = "4.3.1"
loguru = "^0.5.3"
fonttools = "^4.18.2"
requests = "^2.25.1"
pillow = "^8.1.0"
Flask-Cors = "^3.0.10"
pytesseract = "^0.3.8"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "douban"
#default = true
#url = "https://pypi.doubanio.com/simple/"
