[tool.poetry]
name = "poirot"
version = "0.1.0"
description = ""
authors = ["harumonia <zxjlm233@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "^0.95.0"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
orjson = "^3.8.7"
fonttools = "^4.39.2"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
default = true
url = "https://pypi.doubanio.com/simple/"
